# siftguard

./: .dockerignore  .env  .gitignore  .mcp.TEST-002.json  .pre-commit-config.yaml  CLAUDE-TEST-002.md  Dockerfile  LICENSE  LIMITATIONS.md  Makefile  README.md  ROADMAP.md  T14_v2_handoff.md  index.html  pyproject.toml  requirements.txt  sbom.spdx.json
.codex/: config.toml
.github/workflows/: ci.yml  release.yml
audit/: siftguard.db
cases/TEST-001/siftguard/: .mcp.json  CLAUDE.md
docs/: COMPLIANCE.md  COST_LEDGER.md  EVAL_FRAMEWORK.md  LIMITATIONS.md  LIMITATIONS.md.bak  RELEASE_NOTES.md  THREAT_MODEL.md  TOOL_CATALOG.md
docs/adr/: ADR-001-empirical-evaluation-framework.md  ADR-002-trace-data-model.md  ADR-003-loop-instrumentation.md  ADR-005-analytics-module-design.md  ADR-006-multi-orchestrator-vendor-lockin.md  ADR-007-scorer-audit-db.md  ADR-007-spoliation-moat.md  ADR-008-canonical-case-loader.md  ADR-009-scorer-audit-db.md  README.md
docs/architecture/: README.md
docs/devpost/: SUBMISSION.md  loom_script.md
docs/results/: T13_delta.md
docs/reviews/: codex_architecture.md  codex_gpt55_deep_consolidated_review.md  codex_test_gaps.md  siftguard_master_review.md
experiments/: run.py
experiments/analysis/2026-05-07/: data.json  manifest.json  report.md
experiments/analysis/2026-05-08/: data.json  manifest.json  report.md
experiments/analysis/2026-05-09/: data.json  manifest.json  report.md
experiments/analysis/2026-05-09-TEST-001/: data.json  manifest.json  report.md
experiments/analysis/2026-05-09-TEST-004/: data.json  manifest.json  report.md
experiments/analysis/2026-05-09-TEST-005/: data.json  manifest.json  report.md
experiments/analysis/TEST-001/: data.json
experiments/analysis/TEST-002/: data.json
experiments/analysis/TEST-003/: data.json
experiments/analysis/final-TEST-004/: manifest.json  report.md
experiments/analysis/final-TEST-005/: data.json  manifest.json  report.md
experiments/cases/: CASE_MANIFEST_SCHEMA.md
experiments/cases/TEST-001/: manifest.json
experiments/cases/TEST-002/: manifest.json
experiments/cases/TEST-003/: manifest.json
experiments/configs/: ablation_no_correlation.json  ablation_no_self_correction.json  ablation_v1_baseline.json  baseline.json  baseline_claudecode.json  baseline_langgraph.json  iter_sweep_1.json  iter_sweep_10.json  iter_sweep_3.json  iter_sweep_5.json
experiments/ground_truth/: SCHEMA-v1.1.0.md  TEST-001-v1.1.0.json  TEST-002-v1.1.0.json  TEST-003-v1.1.0.json
migrations/: 001_eval_framework_schema.sql  002_run_id.sql
scripts/: apply_t14.py  check_methodology.py  cold_clone_test.sh  generate_tool_catalog.py  inspect_experiment_coverage.py  migrate.py  score_test002.py  score_test002_v110.py  seed_spoliation_receipts.py  t13_score_all.py
src/siftguard/agent/: instrumentation.py  loop.py  loop_v1.py  loop_v2.py  output_schema.py  output_validator.py  system_prompt_gate.py
src/siftguard/audit/: log.py  snapshot_writer.py
src/siftguard/cases/: __init__.py  loader.py  tool_injection.py
src/siftguard/cli/: main.py
src/siftguard/dashboard/: app.py  index.html
src/siftguard/eval/: __init__.py  ablation_runner.py  builder.py  ground_truth.py  loop.py  loop_v2.py  manifest.py  methodology.py  panel_7_writer.py  run_experiment.py  scorer.py  tool_injection.py  trace.py  variance.py  verifier.py  verifier_models.py
src/siftguard/mcp_server/: safe_exec.py  server.py
src/siftguard/models/: correction_taxonomy.py  forensic.py
src/siftguard/orchestrators/: __init__.py  base.py  gemini_adapter.py  langgraph_adapter.py  openai_fc_adapter.py
src/siftguard/parsers/: filesystem_parser.py  (+2 more)
tests/: __init__.py  test_readme_hero.py  test_seed_spoliation_receipts.py  test_submission_md.py
tests/agent/: test_output_schema.py  test_system_prompt_gate.py
tests/benchmark/: runner.py  scorer.py  test_f1_baseline.py
tests/cases/: test_loader.py  test_tool_injection.py
tests/dashboard/: test_orchestrator_comparison.py
tests/docs/: test_adr_index.py  test_limitations.py
tests/eval/: test_correction_taxonomy.py  test_dataset_registry.py  test_methodology.py  test_paired_dataset_t11.py  test_panel_6b_stability.py  test_panel_7_writer.py  test_panel_8.py  test_run_experiment.py  test_run_experiment_serializer.py  test_scorer.py  test_trace.py  test_variance.py  test_verifier.py
tests/infra/: test_docker_artifacts.py  test_tool_catalog.py
tests/migrations/: test_001_eval_framework_schema.py  test_002_run_id.py
tests/orchestrators/: test_langgraph_adapter.py
tests/release/: test_sbom_artifacts.py  test_tool_catalog.py
tests/spoliation/: test_spoliation.py
tests/tools/: test_backfill_correction_event.py
tests/unit/: test_scorer.py
tools/: backfill_correction_event.py
(+290 files in other folders)
