[project]
name = "siftguard"
version = "0.1.0"
description = "Autonomous DFIR agent for SANS SIFT Workstation. Typed MCP server with architectural evidence integrity."
requires-python = ">=3.11"
authors = [{name = "Nafees"}]
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "mcp>=1.2.0",
    "anthropic>=0.40.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlmodel>=0.0.22",
    "rich>=13.9.0",
    "typer>=0.13.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "ipython>=8.0.0",
]

[project.scripts]
siftguard = "siftguard.cli.main:app"
siftguard-mcp = "siftguard.mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RET"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
