[project]
name = "siftguard"
version = "0.1.0"
description = "Autonomous DFIR agent for SANS SIFT Workstation. Typed MCP server with architectural evidence integrity."
requires-python = ">=3.11"
authors = [{name = "Nafees"}]
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "mcp>=1.2.0",
    "anthropic>=0.40.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlmodel>=0.0.22",
    "rich>=13.9.0",
    "typer>=0.13.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff==0.15.12",
    "mypy==1.20.2",
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
    "ipython>=8.0.0",
]

[project.scripts]
siftguard = "siftguard.cli.main:app"
siftguard-mcp = "siftguard.mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RET", "DTZ", "PTH", "RUF", "ASYNC"]
ignore = [
    # Forensic domain — permanent
    "N806",    # MFTRecord, IOC, SHA1 legitimately uppercase as locals
    "N818",    # SiftError convention matches stdlib
    "SIM108",  # ternary not always clearer; human decision
    # Pathlib migration — separate refactor, not T20 scope (22 violations)
    "PTH105", "PTH108", "PTH110", "PTH118", "PTH120", "PTH123",
    # Blocking I/O — Volatility3 subprocess calls are inherently blocking (8+1 violations)
    "ASYNC230", "ASYNC240",
    # Forensic strings — APT report text contains legitimate non-ASCII characters
    "RUF001", "RUF002", "RUF003",
    # Intentional patterns
    "RUF006",  # SSE fire-and-forget dangling task is intentional
    "RUF043",  # pytest.raises pattern matching intentional in spoliation tests
    "DTZ007",  # forensic timestamps are intentionally naive (parsed from evidence)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B017", "E501"]                                        # spoliation raises + forensic report strings
"src/siftguard/agent/loop_v1.py" = ["E402"]                          # load_dotenv() must precede domain imports
"src/siftguard/agent/loop_v2.py" = ["E402"]                          # load_dotenv() must precede domain imports
"src/siftguard/eval/loop_v2.py" = ["E402"]                           # load_dotenv() must precede domain imports
"src/siftguard/eval/ablation_runner.py" = ["E402"]                   # load_dotenv() must precede domain imports
"src/siftguard/orchestrators/gemini_adapter.py" = ["E402"]           # load_dotenv() must precede domain imports
"src/siftguard/orchestrators/langgraph_adapter.py" = ["E402"]        # load_dotenv() must precede domain imports
"src/siftguard/orchestrators/openai_fc_adapter.py" = ["E402"]        # load_dotenv() must precede domain imports

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/siftguard"]

[tool.coverage.run]
source = ["src/siftguard"]
omit = ["*/__init__.py"]

[tool.coverage.report]
fail_under = 38
show_missing = true

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_untyped_defs = true
warn_redundant_casts = true